--- a/js/2. scope/index.html
+++ b/js/2. scope/index.html
@@ -22,6 +22,8 @@
       }
     }
 
+    // 问题 代码解析阶段干什么？变量提升？代码执行？
+    // 为何块级作用域及 不干了？
     /*使用 var 没有块级作用域 代码 解析阶段 给 result[i] 
     赋值都为 fn 字符串，等到函数执行时，才会 动态获取值内容, 此时去找，当前作用域下 i=5 
     */
