--- a/js/2. scope/index.html
+++ b/js/2. scope/index.html
@@ -56,7 +56,7 @@
     // console.log(result[4]())
 
   </script>
-  <script src="./函数执行this.js"></script>
+  <script src="./5.js"></script>
 
 </body>
 
