--- a/js/5. async/index.html
+++ b/js/5. async/index.html
@@ -10,9 +10,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    body {
+      width: 100px;
+      height: 100px;
+      /* background-color: red; */
+    }
+
+  </style>
 </head>
 
 <body>
+  <button id="btn"></button>
   <script src="1.js"></script>
 </body>
 
