--- a/js/5. async/index.html
+++ b/js/5. async/index.html
@@ -22,7 +22,8 @@
 
 <body>
   <button id="btn"></button>
-  <script src="2.js"></script>
+  <script src="3.js"></script>
+  <!-- <script src="./myPromise.js"></script> -->
 </body>
 
 </html>
