--- a/regexp/index.html
+++ b/regexp/index.html
@@ -1,3 +1,7 @@
+<!--
+ * @LastEditors: wudan01
+ * @description: 文件描述
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +13,7 @@
 </head>
 
 <body>
-    <script src="2.js"></script>
+    <script src="4.js"></script>
 </body>
 
 </html>
