--- a/richText/index.html
+++ b/richText/index.html
@@ -24,7 +24,7 @@
                 execCmd('bold');
                 execCmd('styleWithCSS', false);
             };
-            // exec();
+            exec();
         }
 
 
